--- a/app/src/main/res/layout/bottom_sheet_menu.xml
+++ b/app/src/main/res/layout/bottom_sheet_menu.xml
@@ -109,6 +109,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/btnMyReviewsBottomSheet"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             android:orientation="horizontal"
