Bug fix on ProfileEdit.kt, pin and image data not stored in server

--- a/app/src/main/res/layout/bottom_sheet_menu.xml
+++ b/app/src/main/res/layout/bottom_sheet_menu.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/btnProfileBottomSheet"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             android:orientation="horizontal"
@@ -86,6 +87,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/btnTransactionsBottomSheet"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             android:orientation="horizontal"
