loader added in HomeFragment.kt

--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -12,7 +12,7 @@
         android:id="@+id/loginTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Let's Sign in !"
         android:textSize="32sp"
         android:textStyle="bold"
         android:textColor="@color/head_text"
@@ -38,10 +38,11 @@
     <EditText
         android:id="@+id/ETEmail"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:hint="Enter your email..."
+        android:layout_height="40dp"
         android:layout_marginHorizontal="25dp"
         android:layout_marginVertical="8dp"
-        android:background="@drawable/profile_image_bg"
+        android:background="@drawable/edittext_bg"
         android:paddingVertical="8dp"
         android:paddingStart="16dp"
         android:paddingEnd="4dp"
@@ -68,10 +69,11 @@
     <EditText
         android:id="@+id/ETPassword"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:hint="Keep it secret..."
+        android:layout_height="40dp"
         android:layout_marginHorizontal="25dp"
         android:layout_marginVertical="32dp"
-        android:background="@drawable/profile_image_bg"
+        android:background="@drawable/edittext_bg"
         android:paddingVertical="8dp"
         android:paddingStart="16dp"
         android:paddingEnd="4dp"
@@ -101,7 +103,7 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:fontFamily="@font/satoshi_regular"
-        android:background="@drawable/button_bg"
+        android:background="@drawable/normal_button_bg"
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="56dp"
         android:padding="2dp"
