--- a/app/src/main/res/drawable/edittext_bg.xml
+++ b/app/src/main/res/drawable/edittext_bg.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/white">
-    </solid>
-    <corners android:topLeftRadius="28dp" android:topRightRadius="28dp"/>
+    <solid android:color="#f1f5fe"/>
+    <corners android:radius="8dp"/>
 
 </shape>
