--- a/app/src/main/res/layout/frag_register.xml
+++ b/app/src/main/res/layout/frag_register.xml
@@ -113,6 +113,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="14dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,7 +133,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/satoshi_medium"
                 android:gravity="center"
-                android:text="Welcome to Mann Sign"
+                android:textSize="40sp"
+                android:text="Welcome to,\n Mann Sign"
                 android:textColor="@color/head_text"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textStyle="bold"/>
@@ -194,6 +196,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="64dp"
+                android:layout_marginBottom="4dp"
                 android:fontFamily="@font/satoshi_regular"
                 android:text="Email Address"
                 android:textColor="@color/title_text"
@@ -204,9 +207,12 @@
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/ETEmail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:hint="Enter your email.."
+                android:paddingLeft="10dp"
                 android:fontFamily="@font/satoshi_regular"
                 android:textColor="@color/title_text"
+                android:background="@drawable/edittext_bg"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
@@ -221,9 +227,13 @@
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatEditText
+                android:layout_marginTop="4dp"
                 android:id="@+id/ETPassword"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:hint="Don't tell anyone..."
+                android:layout_height="40dp"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edittext_bg"
                 android:fontFamily="@font/satoshi_regular"
                 android:inputType="textPassword"
                 android:textColor="@color/title_text"
@@ -241,9 +251,14 @@
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatEditText
+                android:layout_marginTop="4dp"
+
                 android:id="@+id/etMobileNumber"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:background="@drawable/edittext_bg"
+                android:paddingLeft="10dp"
+                android:hint="Enter your number..."
                 android:fontFamily="@font/satoshi_regular"
                 android:inputType="number"
                 android:maxLength="10"
@@ -256,14 +271,14 @@
                 android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="56dp"
+                android:layout_marginTop="46dp"
                 android:layout_marginHorizontal="56dp"
-                android:background="@drawable/button_bg"
+                android:background="@drawable/normal_button_bg"
                 android:fontFamily="@font/satoshi_regular"
                 android:text="Register"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
