--- a/app/src/main/res/drawable/box_edittext.xml
+++ b/app/src/main/res/drawable/box_edittext.xml
@@ -2,14 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#f2f2f2" />
+    <solid android:color="#f1f5fe" />
 
     <corners
       android:radius="10dp" />
 
 
     <stroke
-        android:width="2dp"
-        android:color="@color/buttonColor" />
+        android:width="1dp"
+        android:color="@color/title_text_color" />
 
 </shape>
