--- a/app/src/main/res/layout/frag_register.xml
+++ b/app/src/main/res/layout/frag_register.xml
@@ -135,7 +135,7 @@
                 android:gravity="center"
                 android:textSize="40sp"
                 android:text="Welcome to,\n Mann Sign"
-                android:textColor="@color/head_text"
+                android:textColor="@color/title_text_color"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textStyle="bold"/>
 
