--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:text="Reset Password"
         android:fontFamily="@font/satoshi_medium"
-        android:textColor="@color/black"
+        android:textColor="@color/title_text_color"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_marginTop="128dp"
@@ -26,6 +26,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/satoshi_regular"
         android:layout_marginTop="72dp"
         android:text="@string/resetPWtxt"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,9 +35,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
+        android:background="@drawable/edittext_bg"
         android:id="@+id/ETEmail"
+        android:paddingLeft="10dp"
+        android:fontFamily="@font/satoshi_medium"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginVertical="20dp"
         android:hint="@string/email"
@@ -47,8 +52,9 @@
         android:id="@+id/btnReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_bg"
-        android:text="send "
+        android:background="@drawable/normal_button_bg"
+        android:text="Send"
+        android:textAllCaps="false"
         android:textColor="@color/white"
         android:layout_marginTop="36dp"
         android:paddingHorizontal="36dp"
