--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Change Password"
-        android:textColor="@color/black"
+        android:textColor="@color/title_text_color"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_marginTop="128dp"
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
+        android:fontFamily="@font/satoshi_regular"
         android:text="We have sent an OTP for changing password request\n kindly check your emails"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,9 +31,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
+        android:background="@drawable/edittext_bg"
+        android:paddingLeft="10dp"
+        android:fontFamily="@font/satoshi_medium"
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="20dp"
         android:hint="Password"
@@ -40,9 +44,12 @@
         tools:layout_editor_absoluteX="32dp" />
 
     <EditText
+        android:background="@drawable/edittext_bg"
+        android:paddingLeft="10dp"
+        android:fontFamily="@font/satoshi_medium"
         android:id="@+id/etConfirmPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="20dp"
         android:hint="Confirm Password"
@@ -71,7 +78,7 @@
             android:id="@+id/root_otp_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="40dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="10dp"
@@ -132,8 +139,9 @@
         android:id="@+id/btnReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_bg"
+        android:background="@drawable/normal_button_bg"
         android:text="Confirm"
+        android:textAllCaps="false"
         android:textColor="@color/white"
         android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
