--- a/app/src/main/res/layout/item_products_main_layout.xml
+++ b/app/src/main/res/layout/item_products_main_layout.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="10dp"
             android:textSize="16sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="6dp"
             app:layout_constraintTop_toBottomOf="@id/txtProductMainCategory"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
