Shimmer effect added in HomeFragment.kt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,11 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="#048F55"
+            android:background="@color/white"
             app:abb_selectedTabType="text"
+            app:abb_indicatorColor="@color/title_text_color"
             app:abb_indicatorAppearance="round"
-            app:abb_tabColor="@color/black"
+            app:abb_tabColor="@color/title_text_color"
             app:abb_indicatorHeight="4dp"
             app:abb_indicatorMargin="24dp"
             app:abb_tabs="@menu/bottom_menu"
