--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constMain"
             android:animateLayoutChanges="true"
-            android:background="#048F55"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -24,7 +24,7 @@
                 android:id="@+id/appBar"
                 android:elevation="0dp"
                 app:elevation="0dp"
-                android:background="#048F55"
+                android:background="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
                     <TextView
                         android:layout_weight="0.6"
                         android:textSize="22sp"
-                        android:textColor="@color/white"
+                        android:textColor="@color/title_text_color"
                         android:fontFamily="@font/satoshi_bold"
                         android:text="Mann Sign"
                         android:gravity="center_vertical"
@@ -70,26 +70,7 @@
 
             </com.google.android.material.appbar.AppBarLayout>
 
-            <LinearLayout
-                android:visibility="visible"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:id="@+id/llLoading"
-                app:layout_constraintTop_toBottomOf="@id/appBar"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:background="#048F55"
-                android:layout_width="match_parent"
-                android:layout_height="0dp">
 
-                <ProgressBar
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-
-            </LinearLayout>
 
             <com.factor.bouncy.BouncyNestedScrollView
                 android:id="@+id/boucneScroll"
@@ -107,6 +88,7 @@
                 >
 
                 <LinearLayout
+                    android:layout_marginTop="2dp"
                     android:id="@+id/linearSearchView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -141,15 +123,24 @@
 
                 </LinearLayout>
 
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmer_view"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <include
+                        android:id="@+id/loadingPlaceHolder"
+                        layout="@layout/loading_home_place_holder"/>
+                </com.facebook.shimmer.ShimmerFrameLayout>
 
 
                 <LinearLayout
-                    android:visibility="gone"
                     android:id="@+id/linearContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:background="@drawable/content_background"
+                    android:layout_marginTop="4dp"
+                    android:visibility="gone"
                     android:orientation="vertical"
                     android:padding="16dp">
 
