--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activity.ProductDetailsActivity">
+        tools:context=".ui.activity.ProductDetailsActivity"
+        android:animateLayoutChanges="true">
 
-    <FrameLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="64dp"
+        android:animateLayoutChanges="true">
 
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingHorizontal="8dp"
-            android:layout_marginBottom="56dp">
+            android:paddingHorizontal="12dp"
+            android:layout_marginBottom="56dp"
+            android:animateLayoutChanges="true">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/ivProduct"
@@ -30,21 +34,44 @@
                 />
 
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title"/>
+                android:text="Title"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:padding="2dp"
+                android:layout_marginTop="@dimen/margin_medium"
+                />
 
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Short Description"/>
+                android:text="Product Description"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginBottom="4dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:padding="2dp"
+                />
 
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvProductDescriptionShort"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Long Description"/>
+                android:textSize="14sp"
+                android:layout_marginBottom="@dimen/margin_medium"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvProductDescriptionLong"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:visibility="gone"
+                android:layout_marginBottom="@dimen/margin_medium"
+                />
 
 
             <com.google.android.material.textview.MaterialTextView
@@ -54,23 +81,24 @@
                 android:textStyle="bold"
                 android:text="Variant Availability"/>
 
-            <androidx.appcompat.widget.AppCompatSpinner
+            <!--<androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/sizeSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                />-->
 
-            <androidx.appcompat.widget.AppCompatSpinner
+            <include
+                android:id="@+id/sizeSpinner"
+                layout="@layout/modern_spinner_layout"/>
+
+            <include
                 android:id="@+id/materialSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                layout="@layout/modern_spinner_layout"/>
 
-            <androidx.appcompat.widget.AppCompatSpinner
+            <include
                 android:id="@+id/languageSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                layout="@layout/modern_spinner_layout"/>
+
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvCategory"
@@ -95,49 +123,57 @@
                 android:textStyle="bold"
                 android:layout_marginBottom="8dp"/>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Reviews"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_gravity="start|center_vertical"
+                    />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="3"
-            android:layout_gravity="bottom">
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/ivFilterReviews"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    app:srcCompat="@drawable/ic_filter"
+                    android:padding="14dp"
+                    android:layout_gravity="end"/>
 
-            <com.google.android.material.button.MaterialButton
-                android:layout_weight="1.3"
-                android:id="@+id/btnCopyCode"
-
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="Add to Cart"
-                android:textSize="15sp" />
+            </FrameLayout>
 
             <TextView
-                android:layout_weight="1.7"
-                android:id="@+id/btnShareProgram"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="16dp"
-
-                android:clickable="true"
-                android:drawablePadding="12dp"
-
-                android:padding="12dp"
+                android:id="@+id/tvNoReviews"
+                android:layout_width="match_parent"
+                android:layout_height="128dp"
+                android:text="No reviews yet "
                 android:gravity="center"
-                android:paddingStart="24dp"
-                android:text="Order Now"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:drawableTint="@color/white"
-                android:focusable="true"
-                tools:ignore="RtlSymmetry" />
+                android:textColor="@color/buttonColor"
+                android:visibility="gone"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvProductReviews"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="@dimen/margin_medium"
+                android:visibility="gone"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </FrameLayout>
+    </androidx.core.widget.NestedScrollView>
 
-</ScrollView>
+    <include
+        android:id="@+id/productBuyingLayout"
+        layout="@layout/product_buying_button_layout"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_medium"/>
+
+</FrameLayout>
 
